Fixed scrollbar glitch

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5908,4 +5908,5 @@ legend {
 iframe {
   width : 100%;
   border : none;
+  overflow: hidden;
 }
